# claimreview-text-extractor

./: .gitignore  README.md  main.py  pyproject.toml
